tests/NormalTests/paczka1/fuzzy1/55512323.err
Error in line 1: dXVPJ S655 28,5
Error in line 3: S997 S655 42,1
Error in line 8: S997 S547 50,6
Error in line 10: Jwx S655 40,2
Error in line 12: S997 S655 90,0
Error in line 25: VAQrf S997 0,5
Error in line 35: Jwx S997 37,18
Error in line 27: dXVPJ S547 61,7
